<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="708dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="19dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="186dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="182dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="157dp"
                    android:layout_height="149dp"
                    app:srcCompat="@drawable/logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location" />

                    <TextView
                        android:id="@+id/businessName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/businessName" />

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/emailAddress" />

                    <TextView
                        android:id="@+id/phoneNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phoneNumber" />

                    <TextView
                        android:id="@+id/numberOfService"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/numberOfService" />
                </LinearLayout>

            </LinearLayout>

        </TableRow>

        <TextView
            android:id="@+id/serviceSectionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serviceDetail" />

        <TextView
            android:id="@+id/serviceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/serviceName" />

        <TextView
            android:id="@+id/serviceDescription"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:text="@string/serviceDescription" />

        <TextView
            android:id="@+id/servicePrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/servicePrice" />

        <Button
            android:id="@+id/showNextServiceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/showNextServiceButtonText" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>